<resources>
    <string name="app_name">Finance Flow</string>


    <string name="welcome_to_financial_flow">Welcome to Finance Flow !</string>
    <string name="onboarding1_description">Track your income and expenses.</string>
    <string name="onboarding1_button">Next</string>

    <string name="onboarding2_name">Visualize Your Spending</string>
    <string name="onboarding2_description">Get insights with real-time charts and see where your money goes</string>
    <string name="onboarding2_button">Get Started</string>

    <string name="signIn_title">Welcome back!</string>
    <string name="signIn_subtitle">Sign in to continue</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signIn_button">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create new account</string>

    <string name="dashboard">Dashboard</string>
    <string name="add">Add</string>
    <string name="budget_nrs_0_00">Budget\nRs. 0.00</string>
    <string name="budget_progress">Budget Progress</string>
    <string name="_0">0%</string>
    <string name="finance_overview">Finance Overview</string>
    <string name="balance_nrs_0_00">Balance\nRs. 0.00</string>
    <string name="income_nrs_0_00">Income\nRs. 0.00</string>
    <string name="expenses_nrs_0_00">Expenses\nRs. 0.00</string>
    <string name="spending_overview">Spending Overview</string>

    <string name="transaction_history">Transaction History</string>

    <string name="add_transaction">Add Transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="save_transaction">Save Transaction</string>

    <string name="edit_transaction">Edit Transaction</string>
    <string name="update_transaction">Update Transaction</string>

    <string name="set_budget">Set Budget</string>
    <string name="budget_amount_rs">Budget Amount (Rs.)</string>
    <string name="enter_budget_amount">Enter Budget Amount</string>
    <string name="save_budget">Save Budget</string>
    <string name="expense_summary_by_category">Expense Summary by Category</string>

    <string name="settings">Settings</string>
    <string name="currency_settings">Currency Settings</string>
    <string name="currency_type">Currency type</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_budget_notification">Enable budget notification</string>
    <string name="get_notified_when_budget_exceeds_80">Get notified when budget exceeds 80%</string>
    <string name="enable_reminder_notification">Enable reminder notification</string>
    <string name="monthly_bill_and_expense_reminders">Monthly bill and expense reminders</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_data">Backup data</string>
    <string name="restore_data">Restore data</string>
    <string name="download_report">Download report</string>
    <string name="download">Download</string>
    <string name="logout">Logout</string>
    <string name="save_settings">Save settings</string>

</resources>
