<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_teal_blue"
    tools:context=".ui.Budget">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_budget"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/text_budget_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_amount_rs"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/budget_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_budget_amount"
                android:background="#F3E2F4"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textColorHint="#504949"
                android:padding="16dp"
                android:minHeight="48dp"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/btnSaveBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_blue"
                android:text="@string/save_budget"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/textViewSummaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expense_summary_by_category"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:id="@+id/category_summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:layout_marginBottom="24dp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@android:color/white"
                android:padding="16dp" />

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/teal_blue"
        app:itemTextColor="@color/teal_blue"
        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
